Criado menu com icones

--- a/index.html
+++ b/index.html
@@ -5,18 +5,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfólio Otávio Vinicios Borges</title>
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="shortcut icon" href="images/favicon.svg" type="image/x-icon">
+    <script src="https://kit.fontawesome.com/d0517b7da9.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
-        <h1>Portfolio HTML e CSS</h1>
-        <p>Portfólio pessoal para exibir minhas habilidades e trabalhos realizados.</p>
-        <p>Criado como um projeto do curso de HTML e CSS do Estudonauta.</p>
+        <nav id="menu">
+            <ul>
+                <li><a href="#"><i class="fa-solid fa-house"></i></a></li>
+                <li><a href="#"><i class="fa-solid fa-bars-progress"></i></i></a></li>
+                <li><a href="#"><i class="fa-solid fa-graduation-cap"></i></a></li>
+                <li><a href="#"><i class="fa-solid fa-trowel-bricks"></i></a></li>
+                <li><a href="#"><i class="fa-solid fa-sun"></i></a></li>
+            </ul>
+        </nav>
     </header>
     <main>
         <h1>Em breve...</h1>
-
+        
     </main>
     <footer>
+        <button class="botao-tema">Trocar Tema</button>
         <p>
             &copy; 2025 Otávio Vinicios Borges. Todos os direitos reservados.
         </p>
