Seção da ficha criada

--- a/index.html
+++ b/index.html
@@ -21,8 +21,23 @@
         </nav>
     </header>
     <main>
-        <h1>Em breve...</h1>
-        
+        <section id="ficha">
+            <img class="foto" src="images/foto-perfil250x250.jpg" alt="Foto de perfil Otávio Vinicios Borges">
+            <h1>Otávio Vinicios Borges</h1>
+            <p>
+                Desenvolvedor Front-End Jr.
+            </p>
+            <div id="social" class="margin">
+                <a href="https://www.linkedin.com/in/otavio-borges/"><i class="fa-brands fa-linkedin"></i></a>
+                <a href="https://www.facebook.com/profile.php?id=61555243592481"><i class="fa-brands fa-facebook"></i></a>
+                <a href="https://github.com/otavioborges1991"><i class="fa-brands fa-github"></i></a>
+                <a href="https://www.instagram.com/ovb1991/"><i class="fa-brands fa-instagram"></i></a>
+                <a href="https://api.whatsapp.com/send?phone=5547992385108"><i class="fa-brands fa-whatsapp"></i></a>
+            </div>
+        </section>
+        <section id="detalhes">
+
+        </section>
     </main>
     <footer>
         <button class="botao-tema">Trocar Tema</button>
