Area de video concluida

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         <nav id="menu">
             <ul>
                 <li><a href="#"><i class="fa-solid fa-house"></i></a></li>
-                <li><a href="#"><i class="fa-solid fa-bars-progress"></i></i></a></li>
-                <li><a href="#"><i class="fa-solid fa-graduation-cap"></i></a></li>
-                <li><a href="#"><i class="fa-solid fa-trowel-bricks"></i></a></li>
+                <li><a href="#projetos"><i class="fa-solid fa-bars-progress"></i></i></a></li>
+                <li><a href="#formacao"><i class="fa-solid fa-graduation-cap"></i></a></li>
+                <li><a href="#projetos"><i class="fa-solid fa-trowel-bricks"></i></a></li>
                 <li><a href="#"><i class="fa-solid fa-sun"></i></a></li>
             </ul>
         </nav>
@@ -36,11 +36,36 @@
             </div>
         </section>
         <section id="detalhes">
+            <article id="video">
+                <i class="fa-solid fa-handshake"></i>a ser criado...
+            </article> <!-- Fim da article video --> 
+            <article id="skills">
+                <h2><i class="fa-solid fa-bars-progress"></i>Skills</h2>
+                <ul>
+                    <li>HTML</li>
+                    <li>CSS</li>
+                    <li>Javascript</li>
+                    <li>PHP</li>
+                    <li>MySql</li>
+                    <li>Python</li>
+                </ul>
+            </article> <!-- Fim da article skills --> 
+            <article id="formacao">
+                <h2><i class="fa-solid fa-graduation-cap"></i>Formação</h2>
+                <ul>
+                    <li>Curso de HTML5 e CSS3 - Estudonauta </li>
+                    <li>Curso de Javascript - Estudonauta</li>
+                    <li>Curso de PHP -Estudonauta </li>
+                    <li>Curso de MySQL - Estudonauta</li>
+                    <li>Curso de Python - Estudonauta</li>
+                </ul>
+            </article> <!-- Fim da article formação --> 
+            <article id="projetos">
 
+            </article> <!-- Fim da article projetos --> 
         </section>
     </main>
     <footer>
-        <button class="botao-tema">Trocar Tema</button>
         <p>
             &copy; 2025 Otávio Vinicios Borges. Todos os direitos reservados.
         </p>
