Rearanjado o curso de Algoritmos

--- a/assets/index.html
+++ b/assets/index.html
@@ -127,91 +127,87 @@
                     </div>
                 </div>
             </article> <!-- Fim da article competência --> 
-            <article id="formacao">
+            <article>
                 <h2><i class="fa-solid fa-graduation-cap"></i>Formação</h2>
                 <div id="formacao">
-                    <div class="curso">
-                        <p class="periodo">
-                            2025 - 2025
-                        </p>
-                        <h3 class="instituicao">
-                            Estudonauta
-                        </h3>
-                        <p class="titulacao">
-                            HTML e CSS
-                        </p>
-                    </div>
-
-                    <div class="curso">
-                        <p class="periodo">
-                            2025 - 2025
-                        </p>
-                        <h3 class="instituicao">
-                            Estudonauta
-                        </h3>
-                        <p class="titulacao">
-                            Javascript
-                        </p>
-                    </div>
-
-                    <div class="curso">
-                        <p class="periodo">
-                            2025 - 2025
-                        </p>
-                        <h3 class="instituicao">
-                            Estudonauta
-                        </h3>
-                        <p class="titulacao">
-                            PHP Basico
-                        </p>
-                    </div>
-
-                    <div class="curso">
-                        <p class="periodo">
-                            2025 - 2025
-                        </p>
-                        <h3 class="instituicao">
-                            Estudonauta
-                        </h3>
-                        <p class="titulacao">
-                            PHP Orientado a Objetos
-                        </p>
-                    </div>
-
-                    <div class="curso">
-                        <p class="periodo">
-                            2025 - 2025
-                        </p>
-                        <h3 class="instituicao">
-                            Estudonauta
-                        </h3>
-                        <p class="titulacao">
-                            MySQL
-                        </p>
-                    </div>
-
-                    <div class="curso">
-                        <p class="periodo">
-                            2025 - 2025
-                        </p>
-                        <h3 class="instituicao">
-                            Estudonauta
-                        </h3>
-                        <p class="titulacao">
-                            PHP com MySQL
-                        </p>
-                    </div>
-
-                    <div class="curso">
-                        <p class="periodo">
-                            2025 - 2025
-                        </p>
-                        <h3 class="instituicao">
-                            Estudonauta
-                        </h3>
-                        <p class="titulacao">
-                            Algoritmos e Lógica de Programação
-                        </p>
+                    <div id="formacao">
+                        <div class="curso">
+                            <p class="periodo">
+                                2025 - 2025
+                            </p>
+                            <h3 class="instituicao">
+                                Estudonauta
+                            </h3>
+                            <p class="titulacao">
+                                Algoritmos e Lógica de Programação
+                            </p>
+                        </div>
+                        <div class="curso">
+                            <p class="periodo">
+                                2025 - 2025
+                            </p>
+                            <h3 class="instituicao">
+                                Estudonauta
+                            </h3>
+                            <p class="titulacao">
+                                HTML e CSS
+                            </p>
+                        </div>
+                        <div class="curso">
+                            <p class="periodo">
+                                2025 - 2025
+                            </p>
+                            <h3 class="instituicao">
+                                Estudonauta
+                            </h3>
+                            <p class="titulacao">
+                                Javascript
+                            </p>
+                        </div>
+                        <div class="curso">
+                            <p class="periodo">
+                                2025 - 2025
+                            </p>
+                            <h3 class="instituicao">
+                                Estudonauta
+                            </h3>
+                            <p class="titulacao">
+                                PHP Basico
+                            </p>
+                        </div>
+                        <div class="curso">
+                            <p class="periodo">
+                                2025 - 2025
+                            </p>
+                            <h3 class="instituicao">
+                                Estudonauta
+                            </h3>
+                            <p class="titulacao">
+                                PHP Orientado a Objetos
+                            </p>
+                        </div>
+                        <div class="curso">
+                            <p class="periodo">
+                                2025 - 2025
+                            </p>
+                            <h3 class="instituicao">
+                                Estudonauta
+                            </h3>
+                            <p class="titulacao">
+                                MySQL
+                            </p>
+                        </div>
+                        <div class="curso">
+                            <p class="periodo">
+                                2025 - 2025
+                            </p>
+                            <h3 class="instituicao">
+                                Estudonauta
+                            </h3>
+                            <p class="titulacao">
+                                PHP com MySQL
+                            </p>
+                        </div>
                     </div>
                 </div>
             </article> <!-- Fim da article formação --> 
