Trabalhando no modo escuro/claro do site

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     <header>
         <nav id="menu">
             <ul>
-                <li><a class="link" href="#ficha"><i class="fa-solid fa-house"></i>Home</a></li>
+                <li><a class="link" href="#detalhes"><i class="fa-solid fa-house"></i>Home</a></li>
                 <li><a class="link" href="#competencias"><i class="fa-solid fa-bars-progress"></i>Competências</i></a></li>
                 <li><a class="link" href="#formacao"><i class="fa-solid fa-graduation-cap"></i>Formações</a></li>
                 <li><a class="link" href="#projetos"><i class="fa-solid fa-trowel-bricks"></i>Projetos</a></li>
-                <li><a class="link" href="#tema"><i class="fa-solid fa-sun"></i>Mudar Tema</a></li>
+                <li><a class="link" id="botao-tema" href="#"><i class="fa-solid fa-moon"></i>Mudar Tema</a></li>
             </ul>
         </nav>
     </header>
